# elepiano

./: .gitignore  .gitmodules  CMakeLists.txt
.claude/commands/: elepiano-build.md  keyscape-extract.md
ble/: alsa_midi_sender.py  ble-bridge.service  ble_bridge.py  gatt_service.py  setup-pi.sh  status_monitor.py
cmake/: pi-toolchain.cmake
data/la-custom-c7-grand/: samples.json
data/la-custom-c7-grand-rel/: samples.json
data/mellotron-strings/: samples.json
data/organ/: vb3-style.cfg
data/rhodes/: samples.json
data/rhodes-classic-clean/: samples.json
data/rhodes-classic-mchr03/: samples.json
data/rhodes-classic-mchrel/: samples.json
data/rhodes-classic-relf/: samples.json
data/rhodes-classic-relf-clean/: samples.json
data/rhodes-classic-relm/: samples.json
data/rhodes-classic-v2/: samples.json
data/rhodes-la-custom/: samples.json
data/rhodes-la-custom-rel/: samples.json
data/rhodes-la-rel/: samples.json
data/vintage-vibe-ep/: samples.json
data/wurlitzer-200a/: samples.json
docs/: 20260303_223002_tailscale-macos-local-network-interference.md  ARCHITECTURE.md  Arturia_formats.md  CC_MAP.md  ClaudeWorklog20260301.md  ClaudeWorklog20260302.md  ClaudeWorklog20260303.md  ClaudeWorklog20260304.md  ClaudeWorklog20260306.md  ClaudeWorklog20260307.md  DEPLOY.md  NKX_format.md  gemini-review-code-reviewer.md  gemini-review-code.md  keyscape-sample-extraction.md  midi2-pe-setup.md  pi5-usb-gadget-setup.md
iOS/ElepianoControl/: project.yml
iOS/ElepianoControl/Resources/: Info.plist
iOS/ElepianoControl/Sources/: AppState.swift  BLEMIDIView.swift  CCSlider.swift  DeviceListView.swift  ElepianoControlApp.swift  MainView.swift  OrganControlView.swift  PianoFXView.swift  Preset.swift  PresetView.swift
ios/elepiano-remote/: project.yml
ios/elepiano-remote/elepiano-remote/: ElepianoRemoteApp.swift  Info.plist
ios/elepiano-remote/elepiano-remote/BLE/: BLEConstants.swift  BLEManager.swift
ios/elepiano-remote/elepiano-remote/Models/: CCParameter.swift  SynthStatus.swift
ios/elepiano-remote/elepiano-remote/Views/: CCControlView.swift  ConnectionView.swift  FaderView.swift  LandscapeCCView.swift  StatusView.swift
src/: audio_output.cpp  audio_output.hpp  flac_decoder.cpp  flac_decoder.hpp  fx_chain.cpp  fx_chain.hpp  ir_convolver.cpp  ir_convolver.hpp  lv2_host.cpp  lv2_host.hpp  main.cpp  midi_input.cpp  midi_input.hpp  organ_engine.cpp  organ_engine.hpp  rt_log.hpp  sample_db.cpp  sample_db.hpp  setbfree_engine.cpp  setbfree_engine.hpp  setbfree_stubs.c  spsc_queue.hpp  status_reporter.cpp  status_reporter.hpp  synth_engine.cpp  synth_engine.hpp  voice.cpp  voice.hpp
tasks/: todo.md
tests/: test_extract_samples.py  test_status_monitor.py
tools/: analyze_noise.py  dump_sample.cpp  extract_samples.py  fix_spca_flac.py  redeploy_samples.sh  sanitize_all.sh  sanitize_flac.cpp
